--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
     <div class="carousel-item carousel3">
 
       <div class="pages d-block w-50">
-        <p>“The weather forecast could be wrong.” However, most likely it was a rogue wave which
-           can travel hundreds of miles across the ocean and capsize unsuspecting boats. I
-           couldn't think about that right now and needed to focus on survival. First,</p>
+        <p>“The <span data-conetnt="w e the r">weather</span> <span data-content="for ca st">forecast</span> could be <span data-content="w ro ng">wrong</span>.” <span data-content="How ever">However</span>, most <span data-content="like ly">likely</span>
+          it was a <span data-content="ro' g">rogue</span> wave which can <span data-content="t ra ve l">travel</span> <span data-content="h un dred s">hundreds</span> of <span data-content="my l s">miles</span> <span data-content="a c ros s">across</span>
+          the <span data-content="o'ce an">ocean</span> and <span data-content="cap size">capsize</span> <span data-content="un sus pec ting">unsuspecting</span> boats. I
+           <span data-content="c ould-(ood) n t">couldn't</span> think about that right now and needed to <span data-content="fo c us">focus</span> on <span data-content="su vi val">survival</span>. First,</p>
           <div class="page-number">
             3
           </div>
@@ -120,9 +121,10 @@
     <div class="carousel-item carousel4">
 
       <div class="pages d-block w-50">
-        <p>I tried looking around for the lights of the boat but it was completely dark.
-           The boat crew and captain would be looking around and yelling for me but I
-           couldn't hear anything.Then out of nowhere something came flying at me and knocked</p>
+        <p>I <span data-content="tri ed">tried</span> <span data-content="look ing">looking</span> <span data-content="a ro un d">around</span> for the lights of the boat
+          but it was <span data-content="com ple' tl">completely</span> <span data-content="d ar k">dark</span>. The boat crew and captain would be looking around and yelling for me but I
+           couldn't hear <span data-content="any thing">anything</span>.Then out of <span data-content="no where">nowhere</span> something came <span data-content="fly ing">flying</span>
+           at me and <span data-content="_nock ed">knocked</span> me <span data-content="un con scious-(sh us)">unconscious</span>.</p>
           <div class="page-number">
             4
           </div>
@@ -131,9 +133,9 @@
     <div class="carousel-item carousel5">
 
       <div class="pages d-block w-50">
-        <p>me unconscious. I feel the warm ocean water around my feet and sand between my lips.
-           The hot sun beating against my skin began to sting. I sat up and rubbed my head.
-           I felt a sharp pain; something solid must have hit my head.</p>
+        <p>I feel the <span data-content="warm">war m</span> ocean water around my feet and <span data-content="s and">sand</span> <span data-content="be t wee' n">between</span> my <span data-content="l ip s">lips</span>.
+           The hot sun <span data-content="be' ting">beating</span> <span data-content="ag ain st">against</span> my <span data-content="s kin">skin</span> <span data-content="be'gan">began</span> to <span data-content="s ting">sting</span>.
+           I sat up and <span data-content="rub bed">rubbed</span> my <span data-content="he d">head</span>. I <span data-content="f elt">felt</span> a sharp pain; something solid must have hit my head.</p>
           <div class="page-number">
             5
           </div>
