--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <div class="pages d-block w-50">
         <p>I feel the <span data-content="warm">war m</span> ocean water around my feet and <span data-content="s and">sand</span> <span data-content="be t wee' n">between</span> my <span data-content="l ip s">lips</span>.
            The hot sun <span data-content="be' ting">beating</span> <span data-content="ag ain st">against</span> my <span data-content="s kin">skin</span> <span data-content="be'gan">began</span> to <span data-content="s ting">sting</span>.
-           I sat up and <span data-content="rub bed">rubbed</span> my <span data-content="he d">head</span>. I <span data-content="f elt">felt</span> a sharp pain; something solid must have hit my head.</p>
+           I sat up and <span data-content="rub bed">rubbed</span> my <span data-content="he d">head</span>. I <span data-content="f el t">felt</span> a <span data-content="sh ar' p">sharp</span> <span data-content="p a'in">pain</span>; something <span data-content="h ar' d">hard</span> must have hit my head.</p>
           <div class="page-number">
             5
           </div>
@@ -144,9 +144,9 @@
     <div class="carousel-item carousel6">
 
       <div class="pages d-block w-50">
-        <p>By some miracle I am still alive and very thankful for that. I tried to stand
-          up but couldn’t; my legs felt like rubber. I looked out over the ocean from the
-          beach and all I could see was nothing but empty sea. Not a single ocean going vessel in sight.</p>
+        <p>By some <span data-content="mi ra cle-(kle) ">miracle </span>I am still <span data-content="a li ve">alive</span> and very <span data-content="thank ful">thankful</span> for that.
+          I <span data-content="tri' ed">tried</span> to stand up but <span data-content="c ood">could</span> <span data-content="not hing">nothing</span>; my <span data-content="le gs">legs</span> felt like <span data-content="rub ber">rubber</span>. I looked out <span data-content="o' ver">over</span> the ocean from the
+          <span data-content="bee' ch">beach</span> and all I could see was nothing but <span data-content="em p ty">empty</span> <span data-content="see">sea</span>. Not a <span data-content="sing gl">single</span> ocean going <span data-content="ves sel">vessel</span> in <span data-content="s i' t">sight</span>.</p>
           <div class="page-number">
             6
           </div>
@@ -154,10 +154,10 @@
     </div>
     <div class="carousel-item carousel7">
 
-      <div class="pages d-block w-50" style="color:white; background-color:black;">
-        <p>As I gradually got my strength back I began to look around the island from
-          the beach…nothing but trees. No sign of life anywhere save for a few crabs and birds.
-           A sense of panic came over me. How am I going to survive? Before long my</p>
+      <div class="pages d-block w-50" style="color:white; background-color:lightgrey;">
+        <p>As I <span data-content="grad u' all y">gradually</span> got my <span data-content="st ren _th">strength</span> back I began to look around the <span data-content="i'_land">island</span> from
+          the <span data-content="bee' ch">beach</span>…nothing but <span data-content="tree' s">trees</span>. No <span data-content="si'_n">sign</span> of life <span data-content="any where">anywhere</span> <span data-content="sa' ve">save</span> for a <span data-content="f u'">few</span> <span data-content="c rab s">crabs</span>
+          and <span data-content="b er ds">birds</span>. A <span data-content="sen se">sense</span> of <span data-content="pan ic">panic</span> came over me. How am I going to <span data-content="sur vi' ve">survive</span>? Before long my</p>
           <div class="page-number">
             7
           </div>
@@ -166,8 +166,8 @@
     <div class="carousel-item carousel8">
 
       <div class="pages d-block w-50">
-        <p>training kicked in. Before going out to sea, the entire crew of the ship had to
-           take a survival class just in case something like this happened. The first thing
+        <p><span data-content="tra'_ning">training</span> <span data-content="k ick ed">kicked</span> in. Before going out to sea, the <span data-content="en ti' re-(er)">entire</span> <span data-content="c ru'">crew</span> of the ship had to
+           take a <span data-content="sur vi val">survival</span> <span data-content="c-(k) l ass">class</span> just in case something like this happened. The first thing
             I must do  is to assess my physical condition. Apart from the sharp pain on</p>
           <div class="page-number">
             8
