--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
 
       <div class="pages d-block w-50">
         <p><span data-content="tra'_ning">training</span> <span data-content="k ick ed">kicked</span> in. Before going out to sea, the <span data-content="en ti' re-(er)">entire</span> <span data-content="c ru'">crew</span> of the ship had to
-           take a <span data-content="sur vi val">survival</span> <span data-content="c-(k) l ass">class</span> just in case something like this happened. The first thing
-            I must do  is to assess my physical condition. Apart from the sharp pain on</p>
+           take a <span data-content="sur vi val">survival</span> <span data-content="c-(k) l ass">class</span> just in <span data-content="ca' se">case</span> something like this <span data-content="hap pen ed">happened</span>. The first thing
+            I must do  is to <span data-content="as s ess">assess</span> my <span data-content="phy-(fe') si cal">physical</span> <span data-content="con di tion-(shon)">condition</span>. <span data-content="A part">Apart</span> from the <span data-content="sh arp">sharp</span>
+            <span data-content="pa' in">pain</span> on</p>
           <div class="page-number">
             8
           </div>
@@ -177,9 +178,10 @@
     <div class="carousel-item carousel9">
 
       <div class="pages d-block w-50">
-        <p>the right side of my head everything else seems fine. I took a quick inventory of
-           everything I had; One watch and one utility knife strapped to my waist and my team's
-            ocean explorer suit with life preserver. The knife is something I used</p>
+        <p>the right side of my head everything else seems fine. I took a <span data-content="qu' ick">quick</span> <span data-content="in ven to ry">inventory</span> of
+           <span data-content="every thing">everything</span> I had; 1 <span data-content="wat  ch">watch</span> and 1 <span data-content="u' ti li ty">utility</span> <span data-content="_ni'f_">knife</span>
+            <span data-content="st rap ped">strapped</span> to my <span data-content="wa' is t">waist</span> and my team's
+            ocean <span data-content="ex' p lor er">explorer</span> suit with life <span data-content="pre ser ver">preserver</span>. The knife is something I used</p>
           <div class="page-number">
             9
           </div>
@@ -188,7 +190,7 @@
     <div class="carousel-item carousel10">
 
       <div class="pages d-block w-50">
-        <p>around the boat all the time which is why I had it secured to my person…lucky me.
+        <p>around the boat all the time which is why it was secured to my belt…lucky me.
            The next thing is to establish shelter in a safe place free of dangerous wildlife;
             to do that I need to do some exploring. It was early in the morning according</p>
           <div class="page-number">
