--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <p>the right side of my head everything else seems fine. I took a <span data-content="qu' ick">quick</span> <span data-content="in ven to ry">inventory</span> of
            <span data-content="every thing">everything</span> I had; 1 <span data-content="wat  ch">watch</span> and 1 <span data-content="u' ti li ty">utility</span> <span data-content="_ni'f_">knife</span>
             <span data-content="st rap ped">strapped</span> to my <span data-content="wa' is t">waist</span> and my team's
-            ocean <span data-content="ex' p lor er">explorer</span> suit with life <span data-content="pre ser ver">preserver</span>. The knife is something I used</p>
+            ocean <span data-content="ex' p lor er">explorer</span> suit with life <span data-content="pre ser ver">preserver</span>. The knife is a tool I used</p>
           <div class="page-number">
             9
           </div>
@@ -190,9 +190,9 @@
     <div class="carousel-item carousel10">
 
       <div class="pages d-block w-50">
-        <p>around the boat all the time which is why it was secured to my belt…lucky me.
-           The next thing is to establish shelter in a safe place free of dangerous wildlife;
-            to do that I need to do some exploring. It was early in the morning according</p>
+        <p>around the boat all the time which is why it was <span data-content="se cur ed">secured</span> to my <span data-content="b el t">belt</span>…<span data-content="luc ky">lucky</span> me.
+           The next thing is to <span data-content="es tab lish">establish</span> <span data-content="sh el ter">shelter</span> in a <span data-content="sa'fe">safe</span> place free of <span data-content="da'n ger ous">dangerous</span> <span data-content="wild life">wildlife</span>;
+            to do that I need to do some <span data-content="ex pl or ing">exploring</span>. It was early in the <span data-content="mor ning">morning</span> <span data-content="ac cor ding">according</span></p>
           <div class="page-number">
             10
           </div>
@@ -201,9 +201,9 @@
     <div class="carousel-item carousel11">
 
       <div class="pages d-block w-50">
-        <p>to my watch so I have all day to look around the area. Brrrrrrrrrr ! my stomach
-          began to growl. A wave of hunger swept over me. Before I go exploring I need to get
-           some food. It didn't take long before I found some coconuts, almond fruit and sea</p>
+        <p>to my <span data-content="wat ch">watch</span> so I have all day to look around the <span data-content="a're' a">area</span>. Brrrrrrrrrr ! my <span data-content="sto mach-(mak)">stomach</span>
+          <span data-content="be gan">began</span> to <span data-content="gr owl">growl</span>. A wave of <span data-content="hun ger">hunger</span> <span data-content="s we p t">swept</span> over me. Before I go exploring I need to get
+           some food. It didn't take long before I found some <span data-content="co co nuts">coconuts</span>, <span data-content="al mon d">almond</span> <span data-content="f ru it">fruit</span> and sea</p>
           <div class="page-number">
             11
           </div>
@@ -212,9 +212,10 @@
     <div class="carousel-item carousel12">
 
       <div class="pages d-block w-50">
-        <p>berries which were plentiful. I also found a conch in the shallows which can be eaten raw.
-        After my meal I felt 100 times better and my morale lifted. Feeling fully energized I set out
-         to find a good spot to shelter. After 3 hours of searching</p>
+        <p><span data-content="b er ries-(ree's)">berries</span> which were <span data-content="plen ti ful">plentiful</span>. I also <span data-content="f oun d">found</span> a <span data-content="c on ch-(k)">conch</span> in the
+          <span data-content="sh al lows">shallows</span> which can be <span data-content="eat-(e't) en">eaten</span> raw. After my <span data-content="me' l">meal</span> I <span data-content="f el t">felt</span> 100 <span data-content="ti' m s">times</span>
+          <span data-content="bet ter">better</span> and my <span data-content="mo ral">morale</span> <span data-content="l if ted">lifted</span>. <span data-content="Feel ing">Feeling</span> <span data-content="ful ly">fully</span> <span data-content="en er gi'z ed">energized</span> I set out
+         to find a good spot to <span data-content="sh el ter">shelter</span>. After 3 <span data-content="_ours-(ow ers)">hours</span> of <span data-content="sear-(s er) ch ing">searching</span></p>
           <div class="page-number">
             12
           </div>
