did the last 2 pages here skipped a bunch

--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
     <div class="carousel-item carousel24">
 
       <div class="pages d-block w-50">
-        <p>the helicopter flying away in the opposite direction. My heart sank. In a last ditch
-           effort I ran back to my camp and set the pile of wood on fire hoping that they may see
-            the smoke, but the fire took too long to get going.</p>
+        <p>the <span data-content="he li cop ter">helicopter</span> <span data-content="fly ing">flying</span> away in the <span data-content="op po sit e">opposite</span> <span data-content="di'rec tion">direction</span>. My <span data-content="h_ ar t">heart</span> <span data-content="s an k">sank</span>.
+          In a last <span data-content="dit ch">ditch</span> <span data-content="ef for t">effort</span> I ran back to my <span data-content="c am p">camp</span> and set the <span data-content="pi' le">pile</span> of wood on <span data-content="fi're">fire</span> hoping that they may see
+            the <span data-content="s mo ke">smoke</span>, but the fire took too long to get going.</p>
           <div class="page-number">
             24
           </div>
@@ -356,9 +356,9 @@
     <div class="carousel-item carousel24">
 
       <div class="pages d-block w-50">
-        <p>By the time the smoke started bellowing upwards to the sky, the helicopter was
-          already over the horizon and out of sight. That night I cried and cried at the
-          missed opportunity to be rescued. Cold and alone I cried myself to sleep.</p>
+        <p>By the time the <span data-content="s mo ke">smoke</span> started <span data-content="bel low ing">bellowing</span> <span data-content="up wards">upwards</span> to the sky, the <span data-content="he li cop ter">helicopter</span> was
+          already over the <span data-content="ho ri' zon">horizon</span> and out of sight. That <span data-content="ni' ght-(t)">night</span> I <span data-content="cri' ed">cried</span> and cried at the
+          <span data-content="miss ed">missed</span> <span data-content="op por tu' ni ty">opportunity</span> to be <span data-content="res cu' ed">rescued</span>. <span data-content="C old">Cold</span> and alone I cried <span data-content="my self">myself</span> to sleep.</p>
           <div class="page-number">
             25
           </div>
