--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </div>
 
   <div class="book-cover">
-    <video class="vid" muted loop autoplay playsinline >
-      <source src="smoke.mp4" type="video/mp4">
+    <video class="vid"  muted loop autoplay playsinline >
+      <source src="Danial1.mp4" type="video/mp4">
     </video>
     <h1>
       <span class="text-animate">I &nbsp;</span>
@@ -224,7 +224,7 @@
     <div class="carousel-item carousel13">
 
       <div class="pages d-block w-50">
-        <p>I found a good spot to set up my camp. It was a big rock with a small cave just big
+        <p>I found a good location to set up my camp. It was a big rock with a small cave just big
            enough for one person. The floor of the cave was filled with small pebbles and perfect
             for a makeshift bed. From the front of the cave I can see clearly out</p>
           <div class="page-number">
@@ -347,7 +347,7 @@
       <div class="pages d-block w-50">
         <p>the <span data-content="he li cop ter">helicopter</span> <span data-content="fly ing">flying</span> away in the <span data-content="op po sit e">opposite</span> <span data-content="di'rec tion">direction</span>. My <span data-content="h_ ar t">heart</span> <span data-content="s an k">sank</span>.
           In a last <span data-content="dit ch">ditch</span> <span data-content="ef for t">effort</span> I ran back to my <span data-content="c am p">camp</span> and set the <span data-content="pi' le">pile</span> of wood on <span data-content="fi're">fire</span> hoping that they may see
-            the <span data-content="s mo ke">smoke</span>, but the fire took too long to get going.</p>
+            the <span data-content="s mo ke">smoke</span>, but the fire took too <span data-content="l ong">long</span> to get going.</p>
           <div class="page-number">
             24
           </div>
