add spans up to p13

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
     <div class="carousel-item carousel7">
 
-      <div class="pages d-block w-50" style="color:white; background-color:lightgrey;">
+      <div class="pages d-block w-50" style="color:; background-color:lightgrey;">
         <p>As I <span data-content="grad u' all y">gradually</span> got my <span data-content="st ren _th">strength</span> back I began to look around the <span data-content="i'_land">island</span> from
           the <span data-content="bee' ch">beach</span>…nothing but <span data-content="tree' s">trees</span>. No <span data-content="si'_n">sign</span> of life <span data-content="any where">anywhere</span> <span data-content="sa' ve">save</span> for a <span data-content="f u'">few</span> <span data-content="c rab s">crabs</span>
           and <span data-content="b er ds">birds</span>. A <span data-content="sen se">sense</span> of <span data-content="pan ic">panic</span> came over me. How am I going to <span data-content="sur vi' ve">survive</span>? Before long my</p>
@@ -224,9 +224,9 @@
     <div class="carousel-item carousel13">
 
       <div class="pages d-block w-50">
-        <p>I found a good location to set up my camp. It was a big rock with a small cave just big
-           enough for one person. The floor of the cave was filled with small pebbles and perfect
-            for a makeshift bed. From the front of the cave I can see clearly out</p>
+        <p>I found a good <span data-content="lo ca'tion">location</span> to set up my camp. It was a <span data-content="b ig">big</span> <span data-content="ro ck">rock</span> with a small <span data-content="ca've">cave</span> just big
+           <span data-content="e' nough-(nuf)">enough</span> for one <span data-content="per son">person</span>. The <span data-content="f loo r">floor</span> of the cave was <span data-content="fil l ed">filled</span> with small <span data-content="pebb les">pebbles</span> and <span data-content="per fect">perfect</span>
+            for a <span data-content="make sh if t">makeshift</span> bed. From the <span data-content="f ron t">front</span> of the cave I can see <span data-content="cl-(kl) ear ly">clearly</span> out</p>
           <div class="page-number">
             13
           </div>
