--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </div>
     <div class="carousel-item carousel15">
 
-      <div class="pages d-block w-50" style="color:white; background-color:black;">
+      <div class="pages d-block w-50" style="color:; background-color:lightgrey;">
         <p>to make a signal fire pile. I found empty soda cans, the bottom of which can
            be used to make a sunlight reflector which can be seen from miles away by
            passing sea boats or aircrafts. It will be night soon and I become overwhelmed by sleep.</p>
