--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
     <div class="carousel-item carousel14">
 
       <div class="pages d-block w-50">
-        <p>onto the vast ocean which is important to see any passing boats I can signal.
-          I immediately got to work preparing my camp. I gathered enough wood and palm
-          leaves to make a comfortable sleeping area. Using the excess wood I gathered</p>
+        <p><span data-content="on to">onto</span> the <span data-content="va st">vast</span> ocean which is <span data-content="im por tant">important</span> to see any <span data-content="pas sing">passing</span> boats I can <span data-content="sig nal">signal</span>.
+          I <span data-content="im me' di a'te ly">immediately</span> got to work <span data-content="pre' par ing">preparing</span> my camp. I <span data-content="ga th er ed">gathered</span> enough wood and <span data-content="pa _m">palm</span>
+          <span data-content="le' ave-(v) s">leaves</span> to make a <span data-content="com for table">comfortable</span> <span data-content="slee' ping">sleeping</span> <span data-content="a' re' a">area</span>. Using the <span data-content="ex cess">excess</span> wood I <span data-content="ga th er ed">gathered</span></p>
           <div class="page-number">
             14
           </div>
