--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>castaway</title>
   </head>
   <body>
-    <a href="https://www.pexels.com/photo/young-girl-holding-notebooks-5211463/"><h6 style="opacity:0.3;">Photo by Danlilyai</h6></a>
+    <a href="https://www.pexels.com/photo/scenic-cave-on-sea-shore-6871980/"><h6 style="opacity:0.6;">Photo by Quang Nguyen Vinh</h6></a>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="false" data-bs-interval="25000">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -246,9 +246,9 @@
     <div class="carousel-item carousel15">
 
       <div class="pages d-block w-50" style="color:; background-color:lightgrey;">
-        <p>to make a signal fire pile. I found empty soda cans, the bottom of which can
-           be used to make a sunlight reflector which can be seen from miles away by
-           passing sea boats or aircrafts. It will be night soon and I become overwhelmed by sleep.</p>
+        <p>to make a <span data-content="sig nal">signal</span> fire pile. I found empty soda cans, the bottom of which can
+           be used to make a <span data-content="sun light">sunlight</span> <span data-content="re flec tor">reflector</span> which can be seen from miles away by
+           passing sea boats or <span data-content="air craf ts">aircrafts</span>. It will be night soon and I become <span data-content="over w hel med">overwhelmed</span> by sleep.</p>
           <div class="page-number">
             15
           </div>
@@ -257,9 +257,9 @@
     <div class="carousel-item carousel16">
 
       <div class="pages d-block w-50">
-        <p>My stomach growled but I was too tired to care. My eyes closed as soon as I fell onto
-           the makeshift bed. The next day I woke up early, my watch said 6:04am. A small
-           pool of fresh water formed in a small natural catchment area of the cave.</p>
+        <p>My <span data-content="sto ma ch-(k)">stomach</span> <span data-content="g row led">growled</span> but I was too <span data-content="ti' red-(er d)">tired</span> to care. My eyes <span data-content="cl-(k) os ed">closed</span> as soon as I fell onto
+           the <span data-content="make shift">makeshift</span> bed. The next day I woke up early. My <span data-content="wat ch">watch</span> said 6:04 am. A small
+           pool of <span data-content="f re sh">fresh</span> water <span data-content="for m ed">formed</span> in a small <span data-content="na tu' ral">natural</span> <span data-content="cat ch ment">catchment</span> area of the cave.</p>
           <div class="page-number">
             16
           </div>
@@ -268,9 +268,9 @@
     <div class="carousel-item carousel17">
 
       <div class="pages d-block w-50">
-        <p>It must have rained last night. The pool of fresh water was a life saver. I drank
-          directly from the pool of water and saved as much of it as I could in plastic jugs
-          I found washed up on the island. I got some breakfast, fresh conch, coconut  water</p>
+        <p>It must have <span data-content=""></span> last <span data-content="ni' ght-(t)">night</span>. The pool of <span data-content="fre sh">fresh</span> water was a life <span data-content="sa' ver">saver</span>. I <span data-content="d ran k">drank</span>
+          <span data-content="di' rect ly">directly</span> from the pool of water and saved as much of it as I could in <span data-content="p las tic">plastic</span> jugs
+          I found <span data-content="wa sh ed">washed</span> up on the island. I got some <span data-content="brea'k fast">breakfast</span>, fresh <span data-content="con ch">conch</span>, coconut  water</p>
           <div class="page-number">
             17
           </div>
@@ -279,9 +279,9 @@
     <div class="carousel-item carousel18">
 
       <div class="pages d-block w-50">
-        <p>and some leftover berries from yesterday. After my meal  I continued exploring the island.
-           From exploring around the island I determined that I am on an atoll. An ancient volcano
-           was once on this very spot now sounded by a reef with a lagoon</p>
+        <p>and some <span data-content="left over">leftover</span> <span data-content="b err ies">berries</span> from <span data-content="yes ter day">yesterday</span>. After my <span data-content="me' al-(l)">meal</span>  I <span data-content="con tin u' ed">continued</span> exploring the island.
+           From from my exploration I have <span data-content="de ter min ed">determined</span> that I am on an <span data-content="a toll">atoll</span>. An atoll is the <span data-content="rem nan ce">remnance</span> of an <span data-content="a'n ci ent">ancient</span> <span data-content="vol ca'no">volcano</span>, which over time
+           became an island <span data-content="sur ro un ded">surrounded</span> by a reef with a <span data-content="la goon">lagoon</span></p>
           <div class="page-number">
             18
           </div>
@@ -290,9 +290,9 @@
     <div class="carousel-item carousel19">
 
       <div class="pages d-block w-50">
-        <p>in the middle where the rim of the volcano once stood. The volcano is long gone;
-          It sank back into the sea over the melenneas. The day went by slowly. I spent my time
-           exploring, gathering food and looking out at the ocean for any sign of help.</p>
+        <p>in the <span data-content="middle">middle</span> where the rim of the volcano once stood. The volcano is long gone;
+          It sank back into the sea over the <span data-content="me len ne' as">melenneas</span>. The days went by <span data-content="slow ly">slowly</span>. I spent my time
+           exploring, <span data-content="ga th er ing">gathering</span> food and looking out at the ocean for any <span data-content="si' gn-(n)">sign</span> of help.</p>
           <div class="page-number">
             19
           </div>
