more add last page

--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
     <div class="carousel-item carousel20">
 
       <div class="pages d-block w-50">
-        <p>One day turned into three days, then a full week went by. Life became routine and mondaine.
-        I had plenty of food, water, and wood for fire and adjusting to life as a castaway became
-         easier with each passing day. In survival class we were taught</p>
+        <p>One day turned into three days, then a full week went by. Life became <span data-content="rou'tine">routine</span> and <span data-content="mon da'ine">mondaine</span>.
+        I had <span data-content="p len ty">plenty</span> of food, water, and wood for fire and <span data-content="ad just ing">adjusting</span> to life as a <span data-content="cast away">castaway</span> became
+         <span data-content="e'a-(e') si er">easier</span> with each passing day. In <span data-content="sur vi val">survival</span> class we were <span data-content="t aught-(or t)">taught</span></p>
           <div class="page-number">
             20
           </div>
@@ -312,9 +312,9 @@
     <div class="carousel-item carousel21">
 
       <div class="pages d-block w-50">
-        <p>to keep busy and focus on surviving  will help deal with sad feelings. I thought of all
-           my family members and what they may be going through; by now they must think I'm dead
-           and this makes me very sad. On the 22nd day I arose out of my sleep</p>
+        <p>to keep <span data-content="busy-(be'ze')">busy</span> and <span data-content="fo cus">focus</span> on surviving will help <span data-content="de' l">deal</span> with sad feelings. I <span data-content="th ough-(or) t">thought</span> of all
+           my <span data-content="fa mi ly">family</span> <span data-content="mem bers">members</span> and what they may be going <span data-content="th rou' gh-(h)">through</span>; by now they must think I'm <span data-content="de _d">dead</span>
+           and this makes me <span data-content="v er y">very</span> sad. On the 22nd day I <span data-content="a ro se">arose</span> out of my sleep</p>
           <div class="page-number">
             21
           </div>
@@ -323,9 +323,9 @@
     <div class="carousel-item carousel22">
 
       <div class="pages d-block w-50">
-        <p>to the sound of what sounded like a helicopter close by. I ran out of my cave and
-          ran down to the beach. I could hear the unmistakable sound of a helicopter but I
-          couldn't see anything. As I listened closely the noise was coming from the other</p>
+        <p>to the <span data-content="s oun d">sound</span> of what sounded like a <span data-content="he li cop ter">helicopter</span> close by. I ran out of my cave and
+          ran down to the <span data-content="bee' ch">beach</span>. I could <span data-content="he air">hear</span> the <span data-content="un mis ta' ka ble">unmistakable</span> sound of a helicopter but I
+          <span data-content="cou_d n 't">couldn't</span> see <span data-content="any thing">anything</span>. As I <span data-content="lis _en ed">listened</span> <span data-content="c lose ly">closely</span> the <span data-content="no is e">noise</span> was coming from the <span data-content="o the r">other</span></p>
           <div class="page-number">
             22
           </div>
@@ -334,9 +334,9 @@
     <div class="carousel-item carousel23">
 
       <div class="pages d-block w-50">
-        <p>side of the island, beyond the trees and out of sight.If I cannot see them, then
-          they cannot see me. I sprinted around the beach and into the woods to the other
-          side of the island as fast as I could. When I got to the other side of the atoll I saw</p>
+        <p>side of the island, <span data-content="be' yond">beyond</span> the trees and out of sight. If I cannot see them, then
+          they cannot see me. I <span data-content="sp rin ted">sprinted</span> around the beach and into the woods to the other
+          side of the island as fast as I could. When I got to the other side of the atoll I could see</p>
           <div class="page-number">
             23
           </div>
